--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -76,7 +76,7 @@
 			</dict>
 			<dict>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Path</key>
 				<string>SSDT-EHCx_OFF.aml</string>
 			</dict>
@@ -683,7 +683,7 @@
 			<key>ShowPicker</key>
 			<true/>
 			<key>Timeout</key>
-			<integer>15</integer>
+			<integer>5</integer>
 			<key>UsePicker</key>
 			<true/>
 		</dict>
@@ -700,16 +700,6 @@
 		</dict>
 		<key>Entries</key>
 		<array>
-			<dict>
-				<key>Comment</key>
-				<string>Not signed for security reasons</string>
-				<key>Enabled</key>
-				<false/>
-				<key>Name</key>
-				<string>CustomOS</string>
-				<key>Path</key>
-				<string>PciRoot(0x0)/Pci(0x1,0x1)/Pci(0x0,0x0)/NVMe(0x1,11-22-33-44-55-66-77-88)/HD(1,GPT,00000000-0000-0000-0000-000000000000,0x800,0x64000)/\EFI\BOOT\BOOTX64.EFI</string>
-			</dict>
 			<dict>
 				<key>Comment</key>
 				<string>Windows 10</string>
@@ -734,7 +724,7 @@
 			<key>RequireVault</key>
 			<false/>
 			<key>ScanPolicy</key>
-			<integer>0</integer>
+			<integer>983299</integer>
 		</dict>
 		<key>Tools</key>
 		<array>
@@ -751,14 +741,28 @@
 				<string>PciRoot(0x0)/Pci(0x1,0x1)/Pci(0x0,0x0)/NVMe(0x1,11-22-33-44-55-66-77-88)/HD(1,GPT,00000000-0000-0000-0000-000000000000,0x800,0x64000)/\EFI\BOOT\BOOTX64.EFI</string>
 			</dict>
 			<dict>
+				<key>Arguments</key>
+				<string></string>
 				<key>Comment</key>
-				<string>Windows 10</string>
+				<string>MsrE2 write Test utility</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Name</key>
-				<string>Windows 10</string>
+				<string>VerifyMsrE2</string>
 				<key>Path</key>
-				<string>PciRoot(0x0)/Pci(0x1F,0x2)/Sata(0x0,0xFFFF,0x0)/HD(1,GPT,0c035fac-7718-4d48-859e-780c5fa9875e,0x800,0xfa000)/\EFI\Microsoft\Boot\bootmgfw.efi</string>
+				<string>VerifyMsrE2.efi</string>
+			</dict>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Comment</key>
+				<string>Not signed for security reasons</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Name</key>
+				<string>Screenshot LCtrl + LAlt + F12</string>
+				<key>Path</key>
+				<string>CrScreenshotDxe.efi</string>
 			</dict>
 		</array>
 	</dict>
@@ -837,20 +841,20 @@
 			<key>SystemProductName</key>
 			<string>iMac19,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02YQ4ZQJV3Q</string>
+			<string>C02YCUZHJV3Q</string>
 			<key>SystemUUID</key>
-			<string>7380EBA4-71A8-42FC-9892-7AF6C07667A2</string>
+			<string>3527169E-27B4-49F6-82B7-3B042246D8AC</string>
 		</dict>
 		<key>Generic</key>
 		<dict>
 			<key>MLB</key>
-			<string>C02920108J9LNV9CB</string>
+			<string>C02909104QXLNV91H</string>
 			<key>SystemProductName</key>
 			<string>iMac19,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02YQ4ZQJV3Q</string>
+			<string>C02YCUZHJV3Q</string>
 			<key>SystemUUID</key>
-			<string>7380EBA4-71A8-42FC-9892-7AF6C07667A2</string>
+			<string>3527169E-27B4-49F6-82B7-3B042246D8AC</string>
 		</dict>
 		<key>PlatformNVRAM</key>
 		<dict>
@@ -859,7 +863,7 @@
 			<key>FirmwareFeaturesMask</key>
 			<string>7FFFDFFF 00000000</string>
 			<key>MLB</key>
-			<string>C02920108J9LNV9CB</string>
+			<string>C02909104QXLNV91H</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
@@ -878,7 +882,7 @@
 			<key>BoardProduct</key>
 			<string>Mac-AA95B1DDAB278B95</string>
 			<key>BoardSerialNumber</key>
-			<string>C02920108J9LNV9CB</string>
+			<string>C02909104QXLNV91H</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
@@ -888,7 +892,7 @@
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>C02YQ4ZQJV3Q</string>
+			<string>C02YCUZHJV3Q</string>
 			<key>ChassisType</key>
 			<integer>9</integer>
 			<key>ChassisVersion</key>
@@ -912,9 +916,9 @@
 			<key>SystemSKUNumber</key>
 			<string>Mac-AA95B1DDAB278B95</string>
 			<key>SystemSerialNumber</key>
-			<string>C02YQ4ZQJV3Q</string>
+			<string>C02YCUZHJV3Q</string>
 			<key>SystemUUID</key>
-			<string>7380EBA4-71A8-42FC-9892-7AF6C07667A2</string>
+			<string>3527169E-27B4-49F6-82B7-3B042246D8AC</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
